fix every bug that in the PKGBUILD file

--- a/Jaguar_Packges/ps4_core/file/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/file/PKGBUILD
@@ -30,6 +30,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 } 
@@ -37,7 +38,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
    return 0
 }
