--- a/Jaguar_Packges/ps4_core/gdbm/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/gdbm/PKGBUILD
@@ -34,13 +34,13 @@ function build() {
     return 0
 }
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
 }
 
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
 
     return 0
