--- a/Jaguar_Packges/ps4_core/kbd/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/kbd/PKGBUILD
@@ -36,6 +36,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 }
@@ -44,8 +45,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    mkdir -pv  ${BUILD_DATA_ROOT}/usr/bin
-    mkdir -pv  ${BUILD_DATA_ROOT}/usr/share
     make DESTDIR=${BUILD_DATA_ROOT}/usr install
     cp -R -v docs/doc -T ${BUILD_DATA_ROOT}/usr/share/doc/kbd-2.6.4
 
