--- a/Jaguar_Packges/ps4_core/sed/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/sed/PKGBUILD
@@ -33,6 +33,7 @@ function build() {
 }
 
 function check() {
+    cd $WORKDIR/$NAME-$VERSION
     make check
     return 0
 } 
@@ -40,7 +41,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make DESTDIR= ${BUILD_DATA_ROOT}/usr install
    install -d -m755           ${BUILD_DATA_ROOT}/usr/share/doc/sed-4.9
    install -m644 doc/sed.html ${BUILD_DATA_ROOT}/usr/share/doc/sed-4.9
