--- a/Jaguar_Packges/ps4_core/zstd/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/zstd/PKGBUILD
@@ -29,6 +29,7 @@ function build() {
 }
 
 function check() {
+     cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 } 
@@ -36,7 +37,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make prefix=${BUILD_DATA_ROOT}/usr install
    rm -v ${BUILD_DATA_ROOT}/usr/lib/libzstd.a
    return 0
