--- a/Jaguar_Packges/ps4_core/bc/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/bc/PKGBUILD
@@ -32,6 +32,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make test
     return 0
 } 
@@ -39,7 +40,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make DESTDIR=${BUILD_DATA_ROOT}/usr install
    return 0
 }
