--- a/Jaguar_Packges/ps4_core/less/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/less/PKGBUILD
@@ -32,13 +32,14 @@ function build() {
     return 0
 }
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make  check
+    return 0
 }
 
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
 
     return 0
