--- a/Jaguar_Packges/ps4_core/libffi/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/libffi/PKGBUILD
@@ -35,6 +35,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 }
@@ -42,7 +43,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make DESTDIR=${BUILD_DATA_ROOT}/usr install
     return 0
 }
