--- a/Jaguar_Packges/ps4_core/libtool/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/libtool/PKGBUILD
@@ -32,13 +32,13 @@ function build() {
     return 0
 }
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make -k  check
 }
 
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
    rm -fv ${BUILD_DATA_ROOT}/usr/lib/libltdl.a
 
