--- a/Jaguar_Packges/ps4_core/patch/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/patch/PKGBUILD
@@ -31,6 +31,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 }
@@ -39,8 +40,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    mkdir -pv  ${BUILD_DATA_ROOT}/usr/bin
-    mkdir -pv  ${BUILD_DATA_ROOT}/usr/share
     make DESTDIR=${BUILD_DATA_ROOT}/usr install
 
     return 0
