--- a/Jaguar_Packges/ps4_core/psmisc/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/psmisc/PKGBUILD
@@ -31,6 +31,7 @@ function build() {
 }
 
 function check() {
+    cd $WORKDIR/$NAME-$VERSION
     make check
     return 0
 } 
@@ -38,7 +39,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make DESTDIR= ${BUILD_DATA_ROOT}/usr install
 
 
