--- a/Jaguar_Packges/ps4_core/xml-parser/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/xml-parser/PKGBUILD
@@ -33,13 +33,13 @@ function build() {
 }
 
 function check() {
+     cd "$WORKDIR/$NAME-$VERSION"
     make test
 }
 
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
 
     return 0
