--- a/Jaguar_Packges/ps4_core/xz/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/xz/PKGBUILD
@@ -34,6 +34,7 @@ function build() {
 }
 
 function check() {
+    cd "$WORKDIR/$NAME-$VERSION"
     make check
     return 0
 } 
@@ -41,7 +42,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
    return 0
 }
