--- a/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
@@ -27,7 +27,7 @@ function check() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
 
     return 0
 }
@@ -36,7 +36,8 @@ function build() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   pip3 install --no-index --no-user --find-links dist flit_core
+   mkdir -pv ${BUILD_DATA_ROOT}/usr
+   pip3 install --no-index --no-user --find-links --prefix=${BUILD_DATA_ROOT}/usr dist flit_core
 
     return 0
 }
