--- a/Jaguar_Packges/ps4_core/meson/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/meson/PKGBUILD
@@ -27,7 +27,7 @@ function check() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
 
     return 0
 }
@@ -37,7 +37,7 @@ function build() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
     mkdir -pv  ${BUILD_DATA_ROOT}/usr/share
-    pip3 install --no-index --find-links dist meson
+    pip3 install --no-index --find-links  --prefix=${BUILD_DATA_ROOT}/usr dist meson
     install -vDm644 data/shell-completions/bash/meson ${BUILD_DATA_ROOT}/usr/share/bash-completion/completions/meson
     install -vDm644 data/shell-completions/zsh/_meson ${BUILD_DATA_ROOT}/usr/share/zsh/site-functions/_meson
     return 0
