--- a/Jaguar_Packges/ps4_core/intltool/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/intltool/PKGBUILD
@@ -42,7 +42,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    install -v -Dm644 doc/I18N-HOWTO ${BUILD_DATA_ROOT}/usr/share/doc/intltool-0.51.0/I18N-HOWTO
 
     return 0
