--- a/Jaguar_Packges/ps4_core/lz4/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/lz4/PKGBUILD
@@ -37,6 +37,6 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make BUILD_STATIC=no PREFIX=${BUILD_DATA_ROOT}/usr install
+   make BUILD_STATIC=no PREFIX=${BUILD_DATA_ROOT} install
    return 0
 }
