--- a/Jaguar_Packges/ps4_core/acl/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/acl/PKGBUILD
@@ -42,7 +42,7 @@ function check() {
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
 
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make DESTDIR=${BUILD_DATA_ROOT} install
 
    return 0
 }
