--- a/Jaguar_Packges/ps4_core/dbus/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/dbus/PKGBUILD
@@ -46,7 +46,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make DESTDIR=${BUILD_DATA_ROOT} install
    ln -sfv /etc/machine-id ${BUILD_DATA_ROOT}/var/lib/dbus
 
    return 0
