--- a/Jaguar_Packges/ps4_core/expat/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/expat/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    install -v -m644 doc/*.{html,css} ${BUILD_DATA_ROOT}/usr/share/doc/expat-2.6.2
 
     return 0
