--- a/Jaguar_Packges/ps4_core/gawk/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/gawk/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    make DESTDIR=${BUILD_DATA_ROOT}/usr install
+    make DESTDIR=${BUILD_DATA_ROOT} install
     ln -sv gawk.1 ${BUILD_DATA_ROOT}/usr/share/man/man1/awk.1
     mkdir -pv                                   ${BUILD_DATA_ROOT}/usr/share/doc/gawk-5.3.0
     cp    -v doc/{awkforai.txt,*.{eps,pdf,jpg}} ${BUILD_DATA_ROOT}/usr/share/doc/gawk-5.3.0
