--- a/Jaguar_Packges/ps4_core/gettext/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/gettext/PKGBUILD
@@ -44,7 +44,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+    make  DESTDIR=${BUILD_DATA_ROOT} install
 
    chmod -v 0755 ${BUILD_DATA_ROOT}/usr/lib/preloadable_libintl.so
     return 0
