--- a/Jaguar_Packges/ps4_core/grep/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/grep/PKGBUILD
@@ -41,8 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   mkdir -pv  ${BUILD_DATA_ROOT}/usr
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
 
     return 0
 }
