--- a/Jaguar_Packges/ps4_core/inetutils/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/inetutils/PKGBUILD
@@ -50,7 +50,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    mv -v ${BUILD_DATA_ROOT}/usr/{,s}bin/ifconfig
 
     return 0
