--- a/Jaguar_Packges/ps4_core/kbd/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/kbd/PKGBUILD
@@ -45,7 +45,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    make DESTDIR=${BUILD_DATA_ROOT}/usr install
+    make DESTDIR=${BUILD_DATA_ROOT} install
     cp -R -v docs/doc -T ${BUILD_DATA_ROOT}/usr/share/doc/kbd-2.6.4
 
     return 0
