--- a/Jaguar_Packges/ps4_core/libxcrypt/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/libxcrypt/PKGBUILD
@@ -45,7 +45,7 @@ function check() {
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
 
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make DESTDIR=${BUILD_DATA_ROOT} install
    cp -av --remove-destination .libs/libcrypt.so.1* ${BUILD_DATA_ROOT}/usr/lib
 
    return 0
