--- a/Jaguar_Packges/ps4_core/mpfr/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/mpfr/PKGBUILD
@@ -44,8 +44,8 @@ function check() {
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
 
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install html
+   make DESTDIR=${BUILD_DATA_ROOT} install
+   make DESTDIR=${BUILD_DATA_ROOT} install html
 
    return 0
 }
