--- a/Jaguar_Packges/ps4_core/nano/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/nano/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    make DESTDIR=${BUILD_DATA_ROOT}/usr install
+    make DESTDIR=${BUILD_DATA_ROOT} install
     install -v -m644 doc/{nano.html,sample.nanorc} ${BUILD_DATA_ROOT}/usr/share/doc/nano-8.1
     return 0
 }
