--- a/Jaguar_Packges/ps4_core/psmisc/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/psmisc/PKGBUILD
@@ -39,7 +39,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
-   make DESTDIR= ${BUILD_DATA_ROOT}/usr install
+   make DESTDIR= ${BUILD_DATA_ROOT} install
 
 
    return 0
