--- a/Jaguar_Packges/ps4_core/sed/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/sed/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION
-   make DESTDIR= ${BUILD_DATA_ROOT}/usr install
+   make DESTDIR= ${BUILD_DATA_ROOT} install
    install -d -m755           ${BUILD_DATA_ROOT}/usr/share/doc/sed-4.9
    install -m644 doc/sed.html ${BUILD_DATA_ROOT}/usr/share/doc/sed-4.9
 
