--- a/Jaguar_Packges/ps4_core/tar/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/tar/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-    make DESTDIR=${BUILD_DATA_ROOT}/usr install
+    make DESTDIR=${BUILD_DATA_ROOT} install
     make -C doc install-html docdir=${BUILD_DATA_ROOT}/usr/share/doc/tar-1.35
 
     return 0
