--- a/Jaguar_Packges/ps4_core/tcl/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/tcl/PKGBUILD
@@ -62,7 +62,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd $WORKDIR/$NAME-$VERSION/unix
-   make DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make DESTDIR=${BUILD_DATA_ROOT} install
    chmod -v u+w ${BUILD_DATA_ROOT}/usr/lib/libtcl8.6.so
    make DESTDIR=${BUILD_DATA_ROOT}/usr install-private-headers
    ln -sfv tclsh8.6 ${BUILD_DATA_ROOT}/usr/bin/tclsh
