--- a/Jaguar_Packges/ps4_core/texinfo/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/texinfo/PKGBUILD
@@ -40,7 +40,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    make TEXMF=${BUILD_DATA_ROOT}/usr/share/texmf install-tex
     pushd /usr/share/info
         rm -v dir
