--- a/Jaguar_Packges/ps4_core/util-linux/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/util-linux/PKGBUILD
@@ -55,7 +55,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    cp -arvf ../fstab ${BUILD_DATA_ROOT}/usr/etc
 
     return 0
