--- a/Jaguar_Packges/ps4_core/vim/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/vim/PKGBUILD
@@ -41,7 +41,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
    ln -sv vim ${BUILD_DATA_ROOT}/usr/bin/vi
     for L in  ${BUILD_DATA_ROOT}/usr/share/man/{,*/}man1/vim.1; do
         ln -sv vim.1 $(dirname $L)/vi.1
