--- a/Jaguar_Packges/ps4_core/xml-parser/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/xml-parser/PKGBUILD
@@ -40,7 +40,7 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
-   make  DESTDIR=${BUILD_DATA_ROOT}/usr install
+   make  DESTDIR=${BUILD_DATA_ROOT} install
 
     return 0
 }
