--- a/Jaguar_Packges/ps4_core/dbus/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/dbus/PKGBUILD
@@ -5,7 +5,7 @@ MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 NAME="dbus"
 VERSION="1.14.10"
 UPSTREAM=1
-DESC="D-Bus is a message bus system, a simple way for applications to talk to one another. D-Bus supplies both a system daemon (for events such as "new hardware device added" or "printer queue changed") and a per-user-login-session daemon (for general IPC needs among user applications). Also, the message bus is built on top of a general one-to-one message passing framework, which can be used by any two applications to communicate directly (without going through the message bus daemon)."
+DESC="D-Bus is a message bus system, a simple way for applications to talk to one another. D-Bus supplies both a system daemon (for events such as new hardware device added or printer queue changed) and a per-user-login-session daemon (for general IPC needs among user applications). Also, the message bus is built on top of a general one-to-one message passing framework, which can be used by any two applications to communicate directly (without going through the message bus daemon)."
 GRPS=("core")
 URL="https://gitlab.freedesktop.org/dbus/dbus"
 LICENSES=("GPL")
