--- a/Jaguar_Packges/ps4_core/markupsafe/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/markupsafe/PKGBUILD
@@ -23,7 +23,7 @@ function prepare() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -36,6 +36,6 @@ function check() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
-   pip3 install --no-index --no-user --find-links --prefix=${BUILD_DATA_ROOT}/usr dist Markupsafe
+   pip3 install --target ${BUILD_DATA_ROOT}/usr --no-index --no-user --find-links dist Markupsafe
    return 0
 }
