--- a/Jaguar_Packges/ps4_core/bash/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/bash/PKGBUILD
@@ -5,7 +5,7 @@ MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 NAME="bash"
 VERSION="5.2.32"
 UPSTREAM=1
-DESC=" The Bash package contains the Bourne-Again Shell."
+DESC="The Bash package contains the Bourne-Again Shell"
 GRPS=("core")
 URL="https://www.gnu.org/software/bash/"
 LICENSES=("GPL")
