--- a/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
@@ -5,7 +5,7 @@ MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 NAME="fit-core"
 VERSION="3.9.0"
 UPSTREAM=1
-DESC=" Flit-core is the distribution-building parts of Flit (a packaging tool for simple Python modules)."
+DESC="Flit-core is the distribution-building parts of Flit (a packaging tool for simple Python modules)."
 GRPS=("core")
 URL="https://github.com/pypa/flit"
 LICENSES=("GPL")
@@ -27,7 +27,7 @@ function check() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -37,7 +37,7 @@ function build() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
-   pip3 install --no-index --no-user --find-links --prefix=${BUILD_DATA_ROOT}/usr dist flit_core
+   pip3 install  --target ${BUILD_DATA_ROOT}/usr --no-index --no-user --find-links dist flit_core
 
     return 0
 }
