--- a/Jaguar_Packges/ps4_core/jinja2/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/jinja2/PKGBUILD
@@ -23,7 +23,7 @@ function prepare() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -37,6 +37,6 @@ function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
 
-   pip3 install --no-index --no-user --find-links  --prefix=${BUILD_DATA_ROOT}/usr dist Jinja2
+   pip3 install  --target ${BUILD_DATA_ROOT}/usr --no-index --no-user --find-links dist Jinja2
    return 0
 }
