--- a/Jaguar_Packges/ps4_core/meson/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/meson/PKGBUILD
@@ -5,7 +5,7 @@ MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 NAME="meson"
 VERSION="1.5.1"
 UPSTREAM=1
-DESC=" Meson is an open source build system designed to be both extremely fast and as user friendly as possible."
+DESC="Meson is an open source build system designed to be both extremely fast and as user friendly as possible."
 GRPS=("core")
 URL="https://mesonbuild.com/"
 LICENSES=("GPL")
@@ -27,7 +27,7 @@ function check() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -37,7 +37,7 @@ function build() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
     mkdir -pv  ${BUILD_DATA_ROOT}/usr/share
-    pip3 install --no-index --find-links  --prefix=${BUILD_DATA_ROOT}/usr dist meson
+    pip3 install --target ${BUILD_DATA_ROOT}/usr --no-index --find-links dist meson
     install -vDm644 data/shell-completions/bash/meson ${BUILD_DATA_ROOT}/usr/share/bash-completion/completions/meson
     install -vDm644 data/shell-completions/zsh/_meson ${BUILD_DATA_ROOT}/usr/share/zsh/site-functions/_meson
     return 0
