--- a/Jaguar_Packges/ps4_core/setuptools/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/setuptools/PKGBUILD
@@ -5,7 +5,7 @@ MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 NAME="setuptools"
 VERSION="72.2.0"
 UPSTREAM=1
-DESC=" Setuptools is a tool used to download, build, install, upgrade, and uninstall Python packages. "
+DESC="Setuptools is a tool used to download, build, install, upgrade, and uninstall Python packages."
 GRPS=("core")
 URL="https://github.com/pypa/setuptools"
 LICENSES=("GPL")
@@ -23,7 +23,7 @@ function prepare() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -38,7 +38,7 @@ function check() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
-   pip3 install --no-index --find-links --prefix=${BUILD_DATA_ROOT}/usr dist setuptools
+   pip3 install --target ${BUILD_DATA_ROOT}/usr --no-index --find-links dist setuptools
 
     return 0
 }
