--- a/Jaguar_Packges/ps4_core/wheel/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/wheel/PKGBUILD
@@ -23,7 +23,7 @@ function prepare() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps --prefix=/usr
+    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
 }
@@ -39,7 +39,7 @@ function check() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv  ${BUILD_DATA_ROOT}/usr
-   pip3 install --no-index --prefix=${BUILD_DATA_ROOT}/usr --find-links=dist wheel
+   pip3 install --target ${BUILD_DATA_ROOT}/usr --no-index  --find-links=dist wheel
 
     return 0
 }
