--- a/Jaguar_Packges/ps4_core/ps4_core/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/ps4_core/PKGBUILD
@@ -89,7 +89,7 @@ DEPENDS=(
         "procps-ng" 
         "util-linux" 
         "e2fsprogs" 
-        "ps4-linux" 
+        # "ps4-linux" 
         "ps4-linux-firmware"
 )
 
