--- a/Jaguar_Packges/ps4_core/bzip2/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/bzip2/PKGBUILD
@@ -44,6 +44,8 @@ function check() {
 # Post build script
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
+   mkdir -pv ${BUILD_DATA_ROOT}/usr/bin
+   mkdir -pv ${BUILD_DATA_ROOT}/usr/lib
    make  DESTDIR=${BUILD_DATA_ROOT} install
    cp -av libbz2.so.* ${BUILD_DATA_ROOT}/usr/lib
    ln -sv libbz2.so.1.0.8 ${BUILD_DATA_ROOT}/usr/lib/libbz2.so
