--- a/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/flit-core/PKGBUILD
@@ -2,7 +2,8 @@
 MAINTAINERS=("TigerClips1 <tigerclips1@ps4repo.site>")
 
 # Package information
-NAME="fit-core"
+NAME="flit-core"
+PKGNAME="flit_core"
 VERSION="3.9.0"
 UPSTREAM=1
 DESC="Flit-core is the distribution-building parts of Flit (a packaging tool for simple Python modules)."
@@ -26,7 +27,7 @@ function check() {
 
 # Build script
 function build() {
-    cd "$WORKDIR/$NAME-$VERSION"
+    cd "$WORKDIR/$PKGNAME-$VERSION"
     pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
 
     return 0
@@ -35,9 +36,8 @@ function build() {
 
 # Post build script
 function postbuild() {
-   cd "$WORKDIR/$NAME-$VERSION"
+   cd "$WORKDIR/$PKGNAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
    pip3 install  --target ${BUILD_DATA_ROOT}/usr --no-index --no-user --find-links dist flit_core
 
-    return 0
-}
+    
