--- a/Jaguar_Packges/ps4_core/e2fsprogs/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/e2fsprogs/PKGBUILD
@@ -50,11 +50,11 @@ function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    make  DESTDIR=${BUILD_DATA_ROOT} install
    rm -fv ${BUILD_DATA_ROOT}/usr/lib/{libcom_err,libe2p,libext2fs,libss}.a
-   gunzip -v /usr/share/info/libext2fs.info.gz
-   install-info --dir-file=/usr/share/info/dir ${BUILD_DATA_ROOT}/usr/share/info/libext2fs.info
+   gunzip -v ${BUILD_DATA_ROOT}/usr/share/info/libext2fs.info.gz
+   install-info --dir-file=${BUILD_DATA_ROOT}/usr/share/info/dir ${BUILD_DATA_ROOT}/usr/share/info/libext2fs.info
    makeinfo -o      doc/com_err.info ../lib/et/com_err.texinfo
    install -v -m644 doc/com_err.info ${BUILD_DATA_ROOT}/usr/share/info
-   install-info --dir-file=/usr/share/info/dir ${BUILD_DATA_ROOT}/usr/share/info/com_err.info
+   install-info --dir-file=${BUILD_DATA_ROOT}/usr/share/info/dir ${BUILD_DATA_ROOT}/usr/share/info/com_err.info
    sed 's/metadata_csum_seed,//' -i ${BUILD_DATA_ROOT}/etc/mke2fs.conf
    return 0
 }
