--- a/Jaguar_Packges/ps4_core/glibc/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/glibc/PKGBUILD
@@ -12,8 +12,8 @@ LICENSES=("GPL")
 DEPENDS=("ps4_core")
 
 # Source information
-SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/glibc-2.40.tar.xz
-     http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/tzdata2024a.tar.gz"
+SRC=("http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/glibc-2.40.tar.xz"
+     "http://ftp.lfs-matrix.net/pub/lfs/lfs-packages/12.2/tzdata2024a.tar.gz"
     )
 
 
