--- a/Jaguar_Packges/ps4_core/jinja2/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/jinja2/PKGBUILD
@@ -23,7 +23,7 @@ function prepare() {
 # Build script
 function build() {
     cd "$WORKDIR/$NAME-$VERSION"
-    pip3 wheel -w dist --no-cache-dir --no-build-isolation --no-deps $PWD
+    python -m build --wheel --no-isolation
 
     return 0
 }
@@ -36,7 +36,7 @@ function check() {
 function postbuild() {
    cd "$WORKDIR/$NAME-$VERSION"
    mkdir -pv ${BUILD_DATA_ROOT}/usr
+    python -m installer -d "${BUILD_DATA_ROOT}/usr" dist/*.whl
 
-   pip3 install  --target ${BUILD_DATA_ROOT}/usr --no-index --no-user --find-links dist Jinja2
    return 0
 }
