--- a/Jaguar_Packges/ps4_core/ps4/PKGBUILD
+++ b/Jaguar_Packges/ps4_core/ps4/PKGBUILD
@@ -34,6 +34,11 @@ function build() {
     return 0
 }
 
+function check() {
+    return 0
+}
+
+
 # Post build script
 function postbuild() {
     echo "Changeing to the working dir"
